@@ -158,3 +158,7 @@ I: 351
 N: John Baldwin
 E: jhb@FreeBSD.org
 I: 370
+
+N: Jan Beich
+E: jbeich@tormail.org
+I: 325
